--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -37,13 +37,14 @@ checksum:
   algorithm: sha256
 signs:
   - artifacts: checksum
-    cmd: gpg2
     args:
       # if you are using this in a GitHub action or some other automated pipeline, you
       # need to pass the batch flag to indicate its not interactive.
       - "--batch"
       - "--local-user"
       - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+      - "--pinentry-mode"
+      - "loopback"
       - "--output"
       - "${signature}"
       - "--detach-sign"
